show the number of elementes next to a tag filter
